chore: Fix typo in demo_under_the_hood.ipynb

--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -132,7 +132,7 @@
     "### Epistemic and Aletoric Uncertainty \n",
     "First, lets print the calibrated probabilities with corresponding uncertainty estimates. The information about the prediction can be found in the `prediction` dictionary in each explanation object. It always contain a `predict` field, with the calibrated probability  (classification and probabilistic regression) or prediction (regression), as well as a lower (`low`) and upper (`high`) bound for the value in `predict`. For classification, an additional `classes` field is also available, containing the class for which the probability is calculated for. For binary classification, it is always the positive class, whereas for multi-class, it is the class with highest calibrated probability.\n",
     "\n",
-    "The `predict` value (for classification and probabilistic regression) correpsond to the epistemic uncertainty, and the uncertainty interval defined by the lower and upper bound correspond to the aletoric uncertainty."
+    "The `predict` value (for classification and probabilistic regression) correspond to the epistemic uncertainty, and the uncertainty interval defined by the lower and upper bound correspond to the aletoric uncertainty."
    ]
   },
   {
@@ -376,7 +376,7 @@
     "\n",
     "print(\"\\nConjunctive rules with feature weights and uncertainty intervals:\")\n",
     "for f, rule in enumerate(conjunctive['rule']):\n",
-    "    rule = rule.replace('\\n', ' ')\n",
+    "    rule = rule.replace('\\n', '')\n",
     "    print(f\"{rule:60s} {conjunctive['weight'][f]:>6.3f} [{conjunctive['weight_low'][f]:>6.3f}, {conjunctive['weight_high'][f]:>6.3f}]\")\n",
     "    \n",
     "factual_explanation.plot_explanation(uncertainty=True)\n",
