chore: restored asymetric and one-sided intervals

--- a/notebooks/quickstart_wrap.ipynb
+++ b/notebooks/quickstart_wrap.ipynb
@@ -814,6 +814,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Default, the confidence interval is set to a symmetric interval of 90% (defined as `low_high_percentiles=(5,95)`). The intervals can cover any user specified interval, including one-sided intervals. To define a one-sided upper-bounded 90% interval, set `low_high_percentiles=(-np.inf,90)`, and to define a one-sided lower-bounded 95% interval, set `low_high_percentiles=(5,np.inf)`. Percentiles can also be set to any other values in the range (0,100) (exclusive), and intervals do not have to be symmetric. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "lower_bounded_explanations = regressor.explain_factual(X_test, low_high_percentiles=(5,np.inf))\n",
+    "asymmetric_explanations = regressor.explain_factual(X_test, low_high_percentiles=(5,75))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Counterfactual Explanations\n",
     "The `explain_counterfactual` will work exactly the same as for classification. Note that the discretizer is now changed. "
    ]
