info: Update quickstart_wrap.ipynb to remove mentions of discretizers

--- a/notebooks/quickstart_wrap.ipynb
+++ b/notebooks/quickstart_wrap.ipynb
@@ -367,8 +367,7 @@
    "metadata": {},
    "source": [
     "#### Counterfactual Explanations\n",
-    "An alternative to factual rules is to extract counterfactual rules. \n",
-    "`explain_counterfactual` can be called to get counterfactual rules with an appropriate discretizer automatically assigned. Note that the discretizer has changed. "
+    "An alternative to factual rules is to extract counterfactual rules, which is done using the `explain_counterfactual` function."
    ]
   },
   {
@@ -706,7 +705,7 @@
    "metadata": {},
    "source": [
     "#### Factual Explanations\n",
-    "Let us explain a test instance using our `WrapCalibratedExplainer` object. The method used to get factual explanations is `explain_factual`. Note that the discretizer is now assigned."
+    "Let us explain a test instance using our `WrapCalibratedExplainer` object. The method used to get factual explanations is `explain_factual`. "
    ]
   },
   {
@@ -833,7 +832,7 @@
    "metadata": {},
    "source": [
     "#### Counterfactual Explanations\n",
-    "The `explain_counterfactual` will work exactly the same as for classification. Note that the discretizer is now changed. "
+    "The `explain_counterfactual` will work exactly the same as for classification. "
    ]
   },
   {
