feat: Renamed plot_all and plot_explanation functions to plot and updated usages

--- a/notebooks/additional_notebooks/demo_multiclass.ipynb
+++ b/notebooks/additional_notebooks/demo_multiclass.ipynb
@@ -1047,8 +1047,8 @@
    ],
    "source": [
     "for i in range(num_to_test):\n",
-    "    factual_explanation.plot_explanation(i, n_features_to_show=5)\n",
-    "    factual_explanation.plot_explanation(i, uncertainty=True, n_features_to_show=5)"
+    "    factual_explanation.plot(i, n_features_to_show=5)\n",
+    "    factual_explanation.plot(i, uncertainty=True, n_features_to_show=5)"
    ]
   },
   {
@@ -1086,8 +1086,8 @@
    ],
    "source": [
     "factual_15 = factual_explanation.get_explanation(15)\n",
-    "factual_15.add_conjunctions(max_rule_size=2).plot_explanation(uncertainty=True, n_features_to_show=30)\n",
-    "factual_15.remove_conjunctions().plot_explanation(uncertainty=True, n_features_to_show=5)"
+    "factual_15.add_conjunctions(max_rule_size=2).plot(uncertainty=True, n_features_to_show=30)\n",
+    "factual_15.remove_conjunctions().plot(uncertainty=True, n_features_to_show=5)"
    ]
   },
   {
@@ -1125,8 +1125,8 @@
    ],
    "source": [
     "factual_17 = factual_explanation.get_explanation(17)\n",
-    "factual_17.add_conjunctions(max_rule_size=2).plot_explanation(uncertainty=True, n_features_to_show=15)\n",
-    "factual_17.remove_conjunctions().plot_explanation(uncertainty=True, n_features_to_show=5)"
+    "factual_17.add_conjunctions(max_rule_size=2).plot(uncertainty=True, n_features_to_show=15)\n",
+    "factual_17.remove_conjunctions().plot(uncertainty=True, n_features_to_show=5)"
    ]
   },
   {
@@ -1340,7 +1340,7 @@
    ],
    "source": [
     "for i in range(num_to_test):\n",
-    "    counterfactual_explanation.plot_explanation(i, n_features_to_show=5)"
+    "    counterfactual_explanation.plot(i, n_features_to_show=5)"
    ]
   },
   {
@@ -1378,8 +1378,8 @@
    ],
    "source": [
     "counterfactual_15 = counterfactual_explanation.get_explanation(15)\n",
-    "counterfactual_15.add_conjunctions(max_rule_size=2).plot_explanation(n_features_to_show=15)\n",
-    "counterfactual_15.remove_conjunctions().plot_explanation(n_features_to_show=5)"
+    "counterfactual_15.add_conjunctions(max_rule_size=2).plot(n_features_to_show=15)\n",
+    "counterfactual_15.remove_conjunctions().plot(n_features_to_show=5)"
    ]
   },
   {
@@ -1417,8 +1417,8 @@
    ],
    "source": [
     "counterfactual_17 = counterfactual_explanation.get_explanation(17)\n",
-    "counterfactual_17.add_conjunctions(max_rule_size=3).plot_explanation(n_features_to_show=15)\n",
-    "counterfactual_17.remove_conjunctions().plot_explanation(n_features_to_show=5)"
+    "counterfactual_17.add_conjunctions(max_rule_size=3).plot(n_features_to_show=15)\n",
+    "counterfactual_17.remove_conjunctions().plot(n_features_to_show=5)"
    ]
   }
  ],
