--- a/notebooks/additional_notebooks/demo_speeddating.ipynb
+++ b/notebooks/additional_notebooks/demo_speeddating.ipynb
@@ -643,13 +643,13 @@
    ],
    "source": [
     "tic = time.time()\n",
-    "counterfactual_explanation.plot_all(n_features_to_show=15)\n",
+    "counterfactual_explanation.plot(n_features_to_show=15)\n",
     "print(f\"Time taken plotting counterfactual rules per instance: {(time.time()-tic)/num_to_test}\")\n",
     "tic = time.time()\n",
     "exp = counterfactual_explanation.add_conjunctions()\n",
     "print(f\"Time taken constructing conjunctive rules per instance: {(time.time()-tic)/num_to_test}\")\n",
     "tic = time.time()\n",
-    "counterfactual_explanation.plot_all(n_features_to_show=15)\n",
+    "counterfactual_explanation.plot(n_features_to_show=15)\n",
     "print(f\"Time taken plotting counterfactual and conjunctive rules per instance: {(time.time()-tic)/num_to_test}\")"
    ]
   },
