--- a/notebooks/additional_notebooks/imbalanced_wrap.ipynb
+++ b/notebooks/additional_notebooks/imbalanced_wrap.ipynb
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have the explanations, we can plot all of them using `plot_all`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot_explanation` function can be called, submitting the index of the test instance to plot."
+    "Once we have the explanations, we can plot all of them using `plot`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot` function can be called, submitting the index of the test instance to plot."
    ]
   },
   {
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "factual_explanations.plot_all()"
+    "factual_explanations.plot()"
    ]
   },
   {
@@ -477,7 +477,7 @@
     }
    ],
    "source": [
-    "factual_explanations.plot_all(uncertainty=True)"
+    "factual_explanations.plot(uncertainty=True)"
    ]
   },
   {
@@ -497,7 +497,7 @@
     }
    ],
    "source": [
-    "factual_explanations.plot_explanation(0, uncertainty=True)"
+    "factual_explanations.plot(0, uncertainty=True)"
    ]
   },
   {
@@ -544,9 +544,9 @@
     }
    ],
    "source": [
-    "factual_explanations.add_conjunctions().plot_explanation(len(y_test)-1)\n",
-    "factual_explanations.plot_explanation(len(y_test)-1, uncertainty=True)\n",
-    "factual_explanations.remove_conjunctions().plot_explanation(len(y_test)-1, uncertainty=True)"
+    "factual_explanations.add_conjunctions().plot(len(y_test)-1)\n",
+    "factual_explanations.plot(len(y_test)-1, uncertainty=True)\n",
+    "factual_explanations.remove_conjunctions().plot(len(y_test)-1, uncertainty=True)"
    ]
   },
   {
@@ -583,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counterfactuals are also visualized using the `plot_all`. Plotting an individual counterfactual explanation is done using `plot_explanation`, submitting the index to plot. Adding or removing conjunctions is done as before. "
+    "Counterfactuals are also visualized using the `plot`. Plotting an individual counterfactual explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
    ]
   },
   {
@@ -623,10 +623,10 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot_explanation(len(y_test)-1)\n",
-    "counterfactual_explanations.add_conjunctions().plot_explanation(len(y_test)-1)\n",
+    "counterfactual_explanations.plot(len(y_test)-1)\n",
+    "counterfactual_explanations.add_conjunctions().plot(len(y_test)-1)\n",
     "\n",
-    "counterfactual_explanations.remove_conjunctions().plot_explanation(len(y_test)-1)"
+    "counterfactual_explanations.remove_conjunctions().plot(len(y_test)-1)"
    ]
   },
   {
