--- a/notebooks/demo_probabilistic_regression.ipynb
+++ b/notebooks/demo_probabilistic_regression.ipynb
@@ -770,7 +770,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot_all()"
+    "factual_explanation.plot()"
    ]
   },
   {
@@ -800,7 +800,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot_all(uncertainty=True)"
+    "factual_explanation.plot(uncertainty=True)"
    ]
   },
   {
@@ -830,7 +830,7 @@
     }
    ],
    "source": [
-    "factual_explanation.add_conjunctions().plot_all(uncertainty=True)"
+    "factual_explanation.add_conjunctions().plot(uncertainty=True)"
    ]
   },
   {
@@ -860,7 +860,7 @@
     }
    ],
    "source": [
-    "factual_explanation.remove_conjunctions().plot_all()"
+    "factual_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -899,7 +899,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctions().plot_all()"
+    "counterfactual_explanation.add_conjunctions().plot()"
    ]
   },
   {
@@ -929,7 +929,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot_all()"
+    "counterfactual_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -998,7 +998,7 @@
    "source": [
     "factual_explanation = ce.explain_factual(testX, 180000)\n",
     "\n",
-    "factual_explanation.add_conjunctions(n_top_features=5).plot_all(n_features_to_show=15)"
+    "factual_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
    ]
   },
   {
@@ -1028,7 +1028,7 @@
     }
    ],
    "source": [
-    "factual_explanation.remove_conjunctions().plot_all()"
+    "factual_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -1067,7 +1067,7 @@
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX, 180000)\n",
     "\n",
-    "counterfactual_explanation.add_conjunctions().plot_all()"
+    "counterfactual_explanation.add_conjunctions().plot()"
    ]
   },
   {
@@ -1097,7 +1097,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot_all()"
+    "counterfactual_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -1152,7 +1152,7 @@
     }
    ],
    "source": [
-    "factual_explanation.add_conjunctions().plot_all()"
+    "factual_explanation.add_conjunctions().plot()"
    ]
   },
   {
@@ -1182,7 +1182,7 @@
     }
    ],
    "source": [
-    "factual_explanation.remove_conjunctions().plot_all()"
+    "factual_explanation.remove_conjunctions().plot()"
    ]
   },
   {
@@ -1228,7 +1228,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctions().plot_all()"
+    "counterfactual_explanation.add_conjunctions().plot()"
    ]
   },
   {
@@ -1260,7 +1260,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.remove_conjunctions().plot_all()"
+    "counterfactual_explanation.remove_conjunctions().plot()"
    ]
   }
  ],
