--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -163,7 +163,7 @@
     "### Factual Explanation\n",
     "A _factual explanation_ is composed of a _calibrated prediction_ from the underlying model accompanied by an _uncertainty interval_ and a collection of _factual feature rules_, each composed of a _feature weight with an uncertainty interval_ and a _factual condition_, covering that feature's instance value. \n",
     "\n",
-    "To access the information used for a feature rule, the easiest way is to use the `_get_rules()` method, gathering all information in a dictionary. The information composing _factual feature rules_ can be gathered from the fields `weight`, `weight_low`, `weight_high` and `rule`. The information shown below is the same as is plotted using `plot_explanation(uncertainty=True)`, with the difference that the rules in the plot are sorted on absolute feature weight."
+    "To access the information used for a feature rule, the easiest way is to use the `_get_rules()` method, gathering all information in a dictionary. The information composing _factual feature rules_ can be gathered from the fields `weight`, `weight_low`, `weight_high` and `rule`. The information shown below is the same as is plotted using `plot(uncertainty=True)`, with the difference that the rules in the plot are sorted on absolute feature weight."
    ]
   },
   {
@@ -209,7 +209,7 @@
     "for f, rule in enumerate(factual['rule']):\n",
     "    print(f\"{factual['value'][f]:6}: {rule:40s} {factual['weight'][f]:>6.3f} [{factual['weight_low'][f]:>6.3f}, {factual['weight_high'][f]:>6.3f}]\")\n",
     "\n",
-    "factual_explanation.plot_explanation(uncertainty=True)"
+    "factual_explanation.plot(uncertainty=True)"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the counterfactual explanations, the probability for the positive class (or the class in the `classes` field in `prediction` for multi-class prediction) with uncertainty interval can be accessed for each counterfactual feature rule. The information showed below is the same as the `plot_explanation()` method, except that the counterfactual feature rules are sorted on their absolute feature weight. "
+    "For the counterfactual explanations, the probability for the positive class (or the class in the `classes` field in `prediction` for multi-class prediction) with uncertainty interval can be accessed for each counterfactual feature rule. The information showed below is the same as the `plot()` method, except that the counterfactual feature rules are sorted on their absolute feature weight. "
    ]
   },
   {
@@ -276,7 +276,7 @@
     "for f, rule in enumerate(counterfactual['rule']):\n",
     "    print(f\"{counterfactual['value'][f]:6}: {rule:40s} {counterfactual['predict'][f]:>6.3f} [{counterfactual['predict_low'][f]:>6.3f}, {counterfactual['predict_high'][f]:>6.3f}]\")\n",
     "\n",
-    "counterfactual_explanation.plot_explanation()"
+    "counterfactual_explanation.plot()"
    ]
   },
   {
@@ -353,7 +353,7 @@
     "    rule = rule.replace('\\n', '')\n",
     "    print(f\"{rule:60s} {conjunctive['weight'][f]:>6.3f} [{conjunctive['weight_low'][f]:>6.3f}, {conjunctive['weight_high'][f]:>6.3f}]\")\n",
     "    \n",
-    "factual_explanation.plot_explanation(uncertainty=True)\n",
+    "factual_explanation.plot(uncertainty=True)\n",
     "factual_explanation.remove_conjunctions()"
    ]
   },
@@ -419,7 +419,7 @@
     "    rule = rule.replace('\\n', ' ')\n",
     "    print(f\"{rule:60s} {conjunctive['predict'][f]:>6.3f} [{conjunctive['predict_low'][f]:>6.3f}, {conjunctive['predict_high'][f]:>6.3f}]\")\n",
     "    \n",
-    "counterfactual_explanation.plot_explanation()\n",
+    "counterfactual_explanation.plot()\n",
     "counterfactual_explanation.remove_conjunctions()"
    ]
   }
