--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -531,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have the explanations, we can plot all of them using `plot_all`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot_explanation` function can be called, submitting the index of the test instance to plot."
+    "Once we have the explanations, we can plot all of them using `plot`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot` function can be called, submitting the index of the test instance to plot."
    ]
   },
   {
@@ -591,10 +591,10 @@
     }
    ],
    "source": [
-    "factual_explanations.plot_all()\n",
-    "factual_explanations.plot_all(uncertainty=True)\n",
+    "factual_explanations.plot()\n",
+    "factual_explanations.plot(uncertainty=True)\n",
     "\n",
-    "factual_explanations.plot_explanation(0, uncertainty=True)"
+    "factual_explanations.plot(0, uncertainty=True)"
    ]
   },
   {
@@ -652,8 +652,8 @@
    ],
    "source": [
     "\n",
-    "factual_explanations.add_conjunctions().plot_all()\n",
-    "factual_explanations.remove_conjunctions().plot_all()"
+    "factual_explanations.add_conjunctions().plot()\n",
+    "factual_explanations.remove_conjunctions().plot()"
    ]
   },
   {
@@ -689,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counterfactuals are also visualized using the `plot_all`. Plotting an individual counterfactual explanation is done using `plot_explanation`, submitting the index to plot. Adding or removing conjunctions is done as before. "
+    "Counterfactuals are also visualized using the `plot`. Plotting an individual counterfactual explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
    ]
   },
   {
@@ -769,11 +769,11 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot_all()\n",
-    "counterfactual_explanations.add_conjunctions().plot_all()\n",
-    "counterfactual_explanations.remove_conjunctions().plot_all()\n",
+    "counterfactual_explanations.plot()\n",
+    "counterfactual_explanations.add_conjunctions().plot()\n",
+    "counterfactual_explanations.remove_conjunctions().plot()\n",
     "\n",
-    "counterfactual_explanations.plot_explanation(0)"
+    "counterfactual_explanations.plot(0)"
    ]
   },
   {
@@ -1361,11 +1361,11 @@
     }
    ],
    "source": [
-    "factual_explanations.plot_all()\n",
-    "factual_explanations.plot_all(uncertainty=True)\n",
+    "factual_explanations.plot()\n",
+    "factual_explanations.plot(uncertainty=True)\n",
     "\n",
-    "factual_explanations.add_conjunctions().plot_all()\n",
-    "factual_explanations.remove_conjunctions().plot_all()"
+    "factual_explanations.add_conjunctions().plot()\n",
+    "factual_explanations.remove_conjunctions().plot()"
    ]
   },
   {
@@ -1462,9 +1462,9 @@
    "source": [
     "counterfactual_explanations = explainer.explain_counterfactual(X_test)\n",
     "\n",
-    "counterfactual_explanations.plot_all()\n",
-    "counterfactual_explanations.add_conjunctions().plot_all()\n",
-    "counterfactual_explanations.remove_conjunctions().plot_all()"
+    "counterfactual_explanations.plot()\n",
+    "counterfactual_explanations.add_conjunctions().plot()\n",
+    "counterfactual_explanations.remove_conjunctions().plot()"
    ]
   },
   {
