--- a/notebooks/quickstart_wrap.ipynb
+++ b/notebooks/quickstart_wrap.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have the explanations, we can plot all of them using `plot_all`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot_explanation` function can be called, submitting the index of the test instance to plot."
+    "Once we have the explanations, we can plot all of them using `plot`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot` function can be called, submitting the index of the test instance to plot."
    ]
   },
   {
@@ -298,10 +298,10 @@
     }
    ],
    "source": [
-    "factual_explanations.plot_all()\n",
-    "factual_explanations.plot_all(uncertainty=True)\n",
+    "factual_explanations.plot()\n",
+    "factual_explanations.plot(uncertainty=True)\n",
     "\n",
-    "factual_explanations.plot_explanation(0, uncertainty=True)"
+    "factual_explanations.plot(0, uncertainty=True)"
    ]
   },
   {
@@ -348,9 +348,9 @@
     }
    ],
    "source": [
-    "factual_explanations.add_conjunctions().plot_explanation(0)\n",
-    "factual_explanations.plot_explanation(0, uncertainty=True)\n",
-    "factual_explanations.remove_conjunctions().plot_explanation(0, uncertainty=True)"
+    "factual_explanations.add_conjunctions().plot(0)\n",
+    "factual_explanations.plot(0, uncertainty=True)\n",
+    "factual_explanations.remove_conjunctions().plot(0, uncertainty=True)"
    ]
   },
   {
@@ -386,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counterfactuals are also visualized using the `plot_all`. Plotting an individual counterfactual explanation is done using `plot_explanation`, submitting the index to plot. Adding or removing conjunctions is done as before. "
+    "Counterfactuals are also visualized using the `plot`. Plotting an individual counterfactual explanation is done using `plot`, submitting the index to plot. Adding or removing conjunctions is done as before. "
    ]
   },
   {
@@ -446,10 +446,10 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot_all()\n",
-    "counterfactual_explanations.add_conjunctions().plot_all()\n",
+    "counterfactual_explanations.plot()\n",
+    "counterfactual_explanations.add_conjunctions().plot()\n",
     "\n",
-    "counterfactual_explanations.plot_explanation(0)"
+    "counterfactual_explanations.plot(0)"
    ]
   },
   {
@@ -794,10 +794,10 @@
     }
    ],
    "source": [
-    "factual_explanations.plot_all()\n",
-    "factual_explanations.plot_all(uncertainty=True)\n",
+    "factual_explanations.plot()\n",
+    "factual_explanations.plot(uncertainty=True)\n",
     "\n",
-    "factual_explanations.add_conjunctions().plot_all(uncertainty=True)"
+    "factual_explanations.add_conjunctions().plot(uncertainty=True)"
    ]
   },
   {
@@ -901,8 +901,8 @@
     }
    ],
    "source": [
-    "counterfactual_explanations.plot_all()\n",
-    "counterfactual_explanations.add_conjunctions().plot_all()"
+    "counterfactual_explanations.plot()\n",
+    "counterfactual_explanations.add_conjunctions().plot()"
    ]
   },
   {
@@ -961,8 +961,8 @@
    ],
    "source": [
     "probabilistic_factual_explanations = regressor.explain_factual(X_test, threshold=200)\n",
-    "probabilistic_factual_explanations.plot_all()\n",
-    "probabilistic_factual_explanations.plot_all(uncertainty=True)"
+    "probabilistic_factual_explanations.plot()\n",
+    "probabilistic_factual_explanations.plot(uncertainty=True)"
    ]
   },
   {
@@ -993,7 +993,7 @@
    ],
    "source": [
     "probabilistic_counterfactual_explanations = regressor.explain_counterfactual(X_test, threshold=200)\n",
-    "probabilistic_counterfactual_explanations.plot_all()"
+    "probabilistic_counterfactual_explanations.plot()"
    ]
   },
   {
