--- a/evaluation/Classification_plots.ipynb
+++ b/evaluation/Classification_plots.ipynb
@@ -225,7 +225,7 @@
     "\n",
     "Once the explanations are extracted, we can visualize them using regular or uncertainty plots. The regular plot include an uncertainty interval for each class and the weights of the most influential features. The weights (positive or negative) always indicate the impact on the blue class. However, the colors are used to indicate which class is positively affected. Negative (red) weights are reducing the probability of the blue class and increasing the probability of the red class. \n",
     "\n",
-    "Regular plots are shown by calling the function `plot_all`, with `n_features_to_show` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']` creating a plot for each instance and file format. "
+    "Regular plots are shown by calling the function `plot`, with `n_features_to_show` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']` creating a plot for each instance and file format. "
    ]
   },
   {
@@ -296,7 +296,7 @@
    ],
    "source": [
     "factual_explanation = ce.explain_factual(testX)\n",
-    "factual_explanation.plot_all(filename='../results/diabetes.pdf')"
+    "factual_explanation.plot(filename='../results/diabetes.pdf')"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "source": [
     "Uncertainty plots are similar to regular plots but also provide an uncertainty estimate for the impact of each feature. Here, the shaded area is the range of possible changes that each feature can result in.\n",
     "\n",
-    "To get uncertainty plots, simply call `plot_all` or `plot_explanation` with the parameter `uncertainty=True`."
+    "To get uncertainty plots, simply call `plot` with the parameter `uncertainty=True`."
    ]
   },
   {
@@ -375,7 +375,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot_all(filename='../results/diabetes_uncertainty.pdf', uncertainty=True)"
+    "factual_explanation.plot(filename='../results/diabetes_uncertainty.pdf', uncertainty=True)"
    ]
   },
   {
@@ -394,8 +394,8 @@
    "source": [
     "# Not used in paper\n",
     "# factual_explanation.add_conjunctions()\n",
-    "# factual_explanation.plot_all(filename='../results/diabetes_conjunctive.pdf', n_features_to_show=15)\n",
-    "# factual_explanation.plot_all(filename='../results/diabetes_uncertainty_conjunctive.pdf', uncertainty=True, n_features_to_show=15)"
+    "# factual_explanation.plot(filename='../results/diabetes_conjunctive.pdf', n_features_to_show=15)\n",
+    "# factual_explanation.plot(filename='../results/diabetes_uncertainty_conjunctive.pdf', uncertainty=True, n_features_to_show=15)"
    ]
   },
   {
@@ -405,7 +405,7 @@
     "#### Counterfactual explanations\n",
     "When using counterfactual explanations, the recommended `Discretizer` is the `EntropyDiscretizer`. The discretizer can be changed into `EntropyDiscretizer` by invoking `set_discretizer('entropy')`. Counterfactual explanations are extracted in the same way as regular and uncertainty explanations. The `EntropyDiscretizer` allows for more varied and precise counterfactual rules. The function `explain_counterfactual` will automatically assign recommended discretizer.\n",
     "\n",
-    "Once the explanations are extracted, we can visualize them using `plot_all` or `plot_explanation`. The counterfactual plot visualize the probability interval for the positive class (`Diabetic` in this example). The counterfactual rules indicate what the interval would have changed into had the feature values changed according to the rule condition."
+    "Once the explanations are extracted, we can visualize them using `plot` function. The counterfactual plot visualize the probability interval for the positive class (`Diabetic` in this example). The counterfactual rules indicate what the interval would have changed into had the feature values changed according to the rule condition."
    ]
   },
   {
@@ -476,7 +476,7 @@
    ],
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX)\n",
-    "counterfactual_explanation.plot_all(filename='../results/diabetes_counterfactual.pdf')"
+    "counterfactual_explanation.plot(filename='../results/diabetes_counterfactual.pdf')"
    ]
   },
   {
@@ -496,7 +496,7 @@
    "outputs": [],
    "source": [
     "# Not used in paper\n",
-    "# counterfactual_explanation.add_conjunctions().plot_all(filename='../results/diabetes_counterfactual_conjunctive.pdf', n_features_to_show=15)"
+    "# counterfactual_explanation.add_conjunctions().plot(filename='../results/diabetes_counterfactual_conjunctive.pdf', n_features_to_show=15)"
    ]
   },
   {
@@ -683,12 +683,12 @@
    "source": [
     "factual_explanation = ce.explain_factual(testX)\n",
     "# Not used in paper\n",
-    "# factual_explanation.plot_all(filename='../results/liver.pdf')\n",
-    "factual_explanation.plot_all(filename='../results/liver_uncertainty.pdf', uncertainty=True)\n",
+    "# factual_explanation.plot(filename='../results/liver.pdf')\n",
+    "factual_explanation.plot(filename='../results/liver_uncertainty.pdf', uncertainty=True)\n",
     "# Not used in paper\n",
     "# factual_explanation.add_conjunctions()\n",
-    "# factual_explanation.plot_all(filename='../results/liver_conjunctive.pdf', n_features_to_show=15)\n",
-    "# factual_explanation.plot_all(filename='../results/liver_uncertainty_conjunctive.pdf', uncertainty=True, n_features_to_show=15)"
+    "# factual_explanation.plot(filename='../results/liver_conjunctive.pdf', n_features_to_show=15)\n",
+    "# factual_explanation.plot(filename='../results/liver_uncertainty_conjunctive.pdf', uncertainty=True, n_features_to_show=15)"
    ]
   },
   {
@@ -699,7 +699,7 @@
    "source": [
     "# Not used in paper\n",
     "# counterfactual_explanation = ce.explain_counterfactual(testX)\n",
-    "# counterfactual_explanation.plot_all(filename='../results/liver_counterfactual.pdf')"
+    "# counterfactual_explanation.plot(filename='../results/liver_counterfactual.pdf')"
    ]
   },
   {
@@ -710,7 +710,7 @@
    "source": [
     "# Not used in paper\n",
     "# counterfactual_explanation.add_conjunctions()\n",
-    "# counterfactual_explanation.plot_all(filename='../results/liver_counterfactual_conjunctive.pdf', n_features_to_show=15)"
+    "# counterfactual_explanation.plot(filename='../results/liver_counterfactual_conjunctive.pdf', n_features_to_show=15)"
    ]
   },
   {
@@ -896,12 +896,12 @@
    ],
    "source": [
     "factual_explanation = ce.explain_factual(testX)\n",
-    "factual_explanation.plot_all(filename='../results/vote.pdf')\n",
+    "factual_explanation.plot(filename='../results/vote.pdf')\n",
     "# Not used in paper\n",
-    "# factual_explanation.plot_all(filename='../results/vote_uncertainty.pdf', uncertainty=True)\n",
+    "# factual_explanation.plot(filename='../results/vote_uncertainty.pdf', uncertainty=True)\n",
     "# factual_explanation.add_conjunctions()\n",
-    "# factual_explanation.plot_all(filename='../results/vote_conjunctive.pdf', n_features_to_show=15)\n",
-    "# factual_explanation.plot_all(filename='../results/vote_uncertainty_conjunctive.pdf', uncertainty=True, n_features_to_show=15)"
+    "# factual_explanation.plot(filename='../results/vote_conjunctive.pdf', n_features_to_show=15)\n",
+    "# factual_explanation.plot(filename='../results/vote_uncertainty_conjunctive.pdf', uncertainty=True, n_features_to_show=15)"
    ]
   },
   {
@@ -980,10 +980,10 @@
    ],
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX)\n",
-    "counterfactual_explanation.plot_all(filename='../results/vote_counterfactual.pdf')\n",
+    "counterfactual_explanation.plot(filename='../results/vote_counterfactual.pdf')\n",
     "# Not used in paper\n",
     "# counterfactual_explanation.add_conjunctions()\n",
-    "# counterfactual_explanation.plot_all(filename='../results/vote_counterfactual_conjunctive.pdf', n_features_to_show=15)"
+    "# counterfactual_explanation.plot(filename='../results/vote_counterfactual_conjunctive.pdf', n_features_to_show=15)"
    ]
   }
  ],
