--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -83,9 +83,9 @@
     "X, y = X.values[idx,:], y.values[idx]\n",
     "test_index = np.array([*range(int(num_to_test/2)), *range(no_of_instances-1, no_of_instances-int(num_to_test/2)-1,-1)])\n",
     "train_index = np.setdiff1d(np.array(range(no_of_instances)), test_index)   \n",
-    "trainCalX, testX = X[train_index,:], X[test_index,:]\n",
-    "trainCalY, testY = y[train_index], y[test_index]\n",
-    "trainX, calX, trainY, calY = train_test_split(trainCalX, trainCalY, test_size=0.33,random_state=42, stratify=trainCalY)\n"
+    "X_train, X_test = X[train_index,:], X[test_index,:]\n",
+    "y_train, y_test = y[train_index], y[test_index]\n",
+    "X_prop_train, X_cal, y_prop_train, y_cal = train_test_split(X_train, y_train, test_size=0.33,random_state=42, stratify=y_train)\n"
    ]
   },
   {
@@ -106,11 +106,11 @@
     "# Train the model and create the explainer\n",
     "model = RandomForestClassifier()\n",
     "\n",
-    "model.fit(trainX,trainY)  \n",
+    "model.fit(X_prop_train,y_prop_train)  \n",
     "\n",
     "ce = CalibratedExplainer(model, \n",
-    "                        calX, \n",
-    "                        calY,\n",
+    "                        X_cal, \n",
+    "                        y_cal,\n",
     "                        feature_names=df.columns,                    \n",
     "                        categorical_features=categorical_features, \n",
     "                        class_labels={0:'Non-diabetic',1:'Diabetic'})"
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "factual_explanations = ce.explain_factual(testX)\n",
+    "factual_explanations = ce.explain_factual(X_test)\n",
     "print('Probability [lower and upper bound] for Diabetic:')\n",
     "print(*zip([f\"Instance {i}: {exp.prediction['predict']:.3f} [{exp.prediction['low']:5.3f}, {exp.prediction['high']:5.3f}]\" \\\n",
     "    for i, exp in enumerate(factual_explanations)]), sep='\\n')"
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counterfactual_explanations = ce.explain_counterfactual(testX)\n",
+    "counterfactual_explanations = ce.explain_counterfactual(X_test)\n",
     "counterfactual_explanation = counterfactual_explanations.get_explanation(0)\n",
     "counterfactual = counterfactual_explanation._get_rules()"
    ]
